# experiment_bot

./: .gitignore  CLAUDE.md  README.md  Task Turing Bot Abstract.md  pyproject.toml
analysis_out_expert_v2/: comparison_cognitionrun_stroop.md  comparison_stop_signal_rdoc.md  comparison_stopit_stop_signal.md  comparison_stroop_rdoc.md  per_subject_cognitionrun_stroop_bot.csv  per_subject_stop_signal_human.csv  per_subject_stop_signal_rdoc_bot.csv  per_subject_stopit_stop_signal_bot.csv  per_subject_stroop_human.csv  per_subject_stroop_rdoc_bot.csv
analysis_out_frozen/: comparison_cognitionrun_stroop.md  comparison_stop_signal_rdoc.md  comparison_stopit_stop_signal.md  comparison_stroop_rdoc.md  per_subject_cognitionrun_stroop_bot.csv  per_subject_stop_signal_rdoc_bot.csv  per_subject_stopit_stop_signal_bot.csv  per_subject_stroop_rdoc_bot.csv
analysis_out_naive/: comparison_cognitionrun_stroop.md  comparison_stop_signal_rdoc.md  comparison_stopit_stop_signal.md  comparison_stroop_rdoc.md  per_subject_cognitionrun_stroop_bot.csv  per_subject_stop_signal_rdoc_bot.csv  per_subject_stopit_stop_signal_bot.csv  per_subject_stroop_rdoc_bot.csv
camera_ready_ccn2026/: README.md  ccn.typ  ccn_extended_abstract.typ  ccn_references.bib  reply_to_ccn.md
data/: rdoc_task_urls.tsv
docs/: clean-run-2026-05-06.md  cse-sign-flip-diagnostic.md  design-audit-2026-05.md  detection-results.md  effect-library-audit.md  generalization-audit.md  heldout-nback-test.md  how-it-works.md  level1-refactor-inspection.md  paper-draft-v1-expert-pipeline.md  paper-draft-v2-naive-participant.md  (+61 more)
(+3600 files in other folders)
