[project]
name = "experiment-bot"
version = "0.1.0"
description = "Human-like behavior executor for web-based cognitive tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "anthropic>=0.42",
    "click>=8.1",
    "numpy>=2.0",
    "httpx>=0.27",
    "pandas>=3.0.1",
    "ipykernel>=7.2.0",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
]

[project.scripts]
experiment-bot = "experiment_bot.cli:main"
experiment-bot-reason = "experiment_bot.reasoner.cli:main"
experiment-bot-extract-norms = "experiment_bot.reasoner.norms_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that require live network/browser (run with RUN_LIVE_LLM=1)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
]
